--- a/examples/net/NetConsolePostgresAdo/NetConsolePostgresAdo.csproj
+++ b/examples/net/NetConsolePostgresAdo/NetConsolePostgresAdo.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Npgsql" Version="8.0.3" />
+    <PackageReference Include="Spectre.Console" Version="0.49.1" />
   </ItemGroup>
 
 </Project>
