--- a/examples/net/NetConsolePostgresfEf/NetConsolePostgresfEf.csproj
+++ b/examples/net/NetConsolePostgresfEf/NetConsolePostgresfEf.csproj
@@ -13,7 +13,7 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
-    <PackageReference Include="Oracle.EntityFrameworkCore" Version="8.23.40" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.4" />
     <PackageReference Include="Spectre.Console" Version="0.49.1" />
   </ItemGroup>
 
